KSCM-1763 - Added code for alignment issue in both find course and find course proposal.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-lum/trunk@67073 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-cm-web/src/main/webapp/ks-cm-krad/css/cm.css
+++ b/ks-cm-web/src/main/webapp/ks-cm-krad/css/cm.css
@@ -24,7 +24,7 @@
     line-height: 45px;
 }
 
-.ks-cm-find-course-proposal .table.uif-gridLayout, .ks-cm-find-course .table.uif-gridLayout {
+.ks-cm-find-course .table.uif-gridLayout {
     border: 0 none;
     margin-bottom: 10px;
     margin-top: 0;
@@ -33,30 +33,30 @@
     width: 450px;
 }
 
-.ks-cm-find-course-proposal .table-bordered th, .ks-cm-find-course .table-bordered th,
-.ks-cm-find-course-proposal .table-bordered td, .ks-cm-find-course .table-bordered td {
+.ks-cm-find-course .table-bordered th,
+.ks-cm-find-course .table-bordered td {
     border-bottom: 0 none;
     border-left: 0 none;
     border-top: 0 none;
 }
 
-.ks-cm-find-course-proposal .uif-gridLayout th[scope="row"], .ks-cm-find-course .uif-gridLayout th[scope="row"] {
+.ks-cm-find-course .uif-gridLayout th[scope="row"] {
     text-align: right;
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
 }
 
-.ks-cm-find-course-proposal .uif-gridLayout th, .ks-cm-find-course .uif-gridLayout th,
-.ks-cm-find-course-proposal .uif-tableCollectionLayout th, .ks-cm-find-course .uif-tableCollectionLayout th {
+.ks-cm-find-course .uif-gridLayout th,
+.ks-cm-find-course .uif-tableCollectionLayout th {
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
 }
 
-.ks-cm-find-course-proposal .uif-gridLayout td, .ks-cm-find-course .uif-gridLayout td,
-.ks-cm-find-course-proposal .uif-inputField input:first-child, .ks-cm-find-course .uif-inputField input:first-child {
+.ks-cm-find-course .uif-gridLayout td,
+.ks-cm-find-course .uif-inputField input:first-child {
     margin-bottom: 0;
     width: 100%;
 }
 
-.ks-cm-find-course-proposal .ks-uif-footer div, .ks-cm-find-course .ks-uif-footer div {
+.ks-cm-find-course .ks-uif-footer div {
 	float: none;
 	margin-left: 356px;
     white-space: nowrap;
